--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,9 @@ p {
   padding: 3% 2%;
 }
 .card:hover{
-  box-shadow: 2px 3px 5px 1px grey;
+  transform: scale(1.03,1.03);
+  transition: .3s;
+  box-shadow: 0 0.5rem 1.2rem #333333;
 }
 /* ---------------cta--------------------------- */
 #cta {
