--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ p {
 }
 .card:hover{
   transform: scale(1.03,1.03);
-  transition: .3s;
+  transition:all .3s ease;
   box-shadow: 0 0.5rem 1.2rem #333333;
 }
 /* ---------------cta--------------------------- */
